修改报价分享下拉加载更多固定搜索框问题

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <noscript>
-    <strong><img src="@/src/assets/images/logo.png" alt="">竹熊君正在努力加载中......</strong>
+    <strong>竹熊君正在努力加载中......</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
