--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="format-detection" content="telephone=yes"/>
   <!-- 把所有http静态资源请求统一转换为https请求资源 -->
   <!-- <meta http-equiv='Content-Security-Policy' content='upgrade-insecure-requests'> -->
   <link rel="icon" href="favicon.ico">
