--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <!-- 把所有http静态资源请求统一转换为https请求资源 -->
   <!-- <meta http-equiv='Content-Security-Policy' content='upgrade-insecure-requests'> -->
   <link rel="icon" href="favicon.ico">
-  <title>小竹熊科技</title>
+  <title>小竹熊 云科技</title>
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_1900734_u95w04vojil.css">
   <!-- 地图 -->
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=Sq9k6GvxctKQIyW4wKWaasFDz5AdlFNH"></script>
